--- a/git.html
+++ b/git.html
@@ -27,12 +27,22 @@ html,body{
   height:100%;
   overflow-y:hidden;
 }
+
+body::-webkit-scrollbar {
+        display: none;
+    }
+div::-webkit-scrollbar {
+        display: none;
+    }
+textarea::-webkit-scrollbar {
+        display: none;
+    }
 body{ 
   margin: 0px;
   padding: 0px;
   //font-size:14px; 
   //line-height:24px;
-} 
+}
 textarea{
   width:100%;
   height:90%;
