--- a/git.html
+++ b/git.html
@@ -28,15 +28,17 @@ html,body{
   overflow-y:hidden;
 }
 
-body::-webkit-scrollbar {
+/*body::-webkit-scrollbar {
         display: none;
     }
+    textarea::-webkit-scrollbar {
+        display: none;
+    }
+    */
 div::-webkit-scrollbar {
         display: none;
     }
-textarea::-webkit-scrollbar {
-        display: none;
-    }
+
 body{ 
   margin: 0px;
   padding: 0px;
