--- a/git.html
+++ b/git.html
@@ -156,6 +156,30 @@ and (orientation : portrait) {
   }
   .ins_box{display:block;}
 }
+
+
+/**
+笔记本
+**/
+@media only screen
+and (min-device-width : 1024px)
+and (max-device-width : 1366px)
+and (orientation : landscape) {
+  .ins{display:none;}
+  body{
+    font-size: 2em;
+  }
+  textarea{
+    //font-size: 2em;
+  }
+  input{
+    font-size:1em;
+  }
+  input[onclick^="shift"] {
+    width:260px;
+  }
+
+}
 </style>
 </head>
 <body>
