--- a/git.html
+++ b/git.html
@@ -94,7 +94,7 @@ white-space:nowrap;
   //top:20px;
   //margin-top:20px;
   	//Word-break: break-all;
-  	overflow-x: auto;
+  	overflow-x: scroll;
   	white-space:nowrap;
 }
 .edit_box{
@@ -176,7 +176,7 @@ and (orientation : landscape) {
     font-size:1em;
   }
   input[onclick^="shift"] {
-    width:260px;
+    width:180px;
   }
 
 }
