--- a/guide.html
+++ b/guide.html
@@ -235,7 +235,7 @@ window.onload=function(){
 
 getGuide=function(){
     git.getFile("page","guide.json").then(function(json){
-        alert(json);
+        //alert(json);
         var json=JSON.parse(json);
         if(json.length==0){
             alert("length==0");
@@ -244,7 +244,7 @@ getGuide=function(){
             for(var i=0;i<json.length;i++){
                 list+="<a href=\""+json[i].href+"\">"+json[i].name+"</a>\n<br />";
             }
-            alert(list);
+            //alert(list);
             guide.innerHTML=list;
         }
     });
@@ -253,7 +253,6 @@ getGuide=function(){
 putGuide=function(name,href){
     var o={"name":name,"href":href};
     git.getFile("page","guide.json").then(function(json){
-        alert(json);
         var json=JSON.parse(json);
         json.push(o);
         var txt=JSON.stringify(json,null,4);
