--- a/guide.html
+++ b/guide.html
@@ -198,6 +198,7 @@ and (orientation : landscape) {
     </div>
     <div id="guide">
         <a href="git.html">git</a>
+         <a href="http://192.168.1.10:8082/main.php">git</a>
     </div>
 		
 </div>
