--- a/git1.html
+++ b/git1.html
@@ -209,7 +209,7 @@
 		</style>
 	</head>
 	<body>
-		<table style="width:100%;height:100%;overflow-x: scroll;border:0px;">
+		<table style="width:100%;height:100%;overflow-x: scroll;border:0;">
 			<tr style="height:auto;background:red;">
 				<td >
 					<div class="top_box1" id="top_box">
