--- a/git1.html
+++ b/git1.html
@@ -446,7 +446,7 @@
 			}
 			window.onresize = function() {
 				//window.innerHeight<400?show_ins():hide_ins();
-				var wh = window.innerHeight;
+				/*var wh = window.innerHeight;
 				var ctr_h = parseInt(window.getComputedStyle(control_box).height);
 				var page_h = parseInt(window.getComputedStyle(page_box).height);
 				var ins_h = parseInt(window.getComputedStyle(ins_box).height) || 0;
@@ -461,7 +461,7 @@
 					document.head.appendChild(st);
 				}
 				st.innerHTML = "textarea{height:" + (wh - ctr_h - page_h - ins_h - ctr_h) + "px;}";
-
+				*/
 				/*//动态添加外置样式表    
 				var  link = document.createElement('link');
 				link.setAttribute('rel', 'stylesheet');
