--- a/123.html
+++ b/123.html
@@ -199,8 +199,7 @@ and (orientation : landscape) {
 </script> 
 <script>  
 window.onload=function(){
-    //git=new gitapi("docfeng");
-    //getGuide();
+    git=new gitapi("docfeng");
     Guide.show();
 }
 
