--- a/123.html
+++ b/123.html
@@ -194,8 +194,12 @@ and (orientation : landscape) {
     </table>
 </div>
 <script id="arr">
-    var urlArr=[{"name":"git","href":"git.html"},
-    {"name":"git","href":"http://192.168.123.92:8082/main.php"}];
+var urlArr=[
+    {
+        "name": "git",
+        "href": "http://192.168.123.92:8082/main.php"
+    }
+]
 </script> 
 <script>  
 window.onload=function(){
