--- a/123.html
+++ b/123.html
@@ -198,6 +198,14 @@ var urlArr=[
     {
         "name": "git",
         "href": "http://192.168.123.92:8082/main.php"
+    },
+    {
+        "name": "git.html",
+        "href": "http://git.docfeng.top/git.html"
+    },
+    {
+        "name": "dir.html",
+        "href": "http://git.docfeng.top/dir.html"
     }
 ]
 </script> 
