--- a/123.html
+++ b/123.html
@@ -206,6 +206,10 @@ var urlArr=[
     {
         "name": "dir.html",
         "href": "http://git.docfeng.top/dir.html"
+    },
+    {
+        "name": "blog4",
+        "href": "http://git.docfeng.top/dir.html#user=docfeng;repos=blog4;path=blog"
     }
 ]
 </script> 
