--- a/123.html
+++ b/123.html
@@ -274,7 +274,7 @@ Guide={
         }else{
             var list="";
             for(var i=0;i<json.length;i++){
-                list+="<tr><td><a href=\""+json[i].href+"\" target=\"_blank\" title=\""+json[i].href+"\">"+json[i].name+"</a><span>X</span><span>e</span></td></tr>";
+                list+="<tr><td><a href=\""+json[i].href+"\" target=\"_blank\" title=\""+json[i].href+"\">"+json[i].name+"</a></td><td><span>X</span><span>e</span></td></tr>";
             }
             //alert(list);
             guide.innerHTML=list;
