--- a/123.html
+++ b/123.html
@@ -210,6 +210,10 @@ var urlArr=[
     {
         "name": "blog4",
         "href": "http://git.docfeng.top/dir.html#user=docfeng;repos=blog4;path=blog"
+    },
+    {
+        "name": "blog",
+        "href": "http://docfeng.top/"
     }
 ]
 </script> 
