--- a/123.html
+++ b/123.html
@@ -196,7 +196,7 @@ and (orientation : landscape) {
 <script id="arr">
 var urlArr=[
     {
-        "name": "git",
+        "name": "123.92/main.php",
         "href": "http://192.168.123.92:8080/main.php"
     },
     {
