--- a/123.html
+++ b/123.html
@@ -214,6 +214,10 @@ var urlArr=[
     {
         "name": "blog",
         "href": "http://docfeng.top/"
+    },
+    {
+        "name": "123.92/dir.php",
+        "href": "192.168.123.92:8080/dir.php"
     }
 ]
 </script> 
