--- a/123.html
+++ b/123.html
@@ -217,7 +217,7 @@ var urlArr=[
     },
     {
         "name": "123.92/dir.php",
-        "href": "192.168.123.92:8080/dir.php"
+        "href": "http://192.168.123.92:8080/dir.php"
     }
 ]
 </script> 
