--- a/gitee.html
+++ b/gitee.html
@@ -235,7 +235,7 @@ var button=button1;
 var name_=Array()
 var txt_=Array()
 
-var user="docfeng",repos="page";
+var user="docf",repos="page";
 
 shift=function(i){
   eval("button" + index).style.color="black";
