--- a/gitee.html
+++ b/gitee.html
@@ -192,6 +192,7 @@ and (orientation : landscape) {
         <input type="button" value="read" onclick="htmlFSO.read()"/>
         <input type="button" value="add" onclick="htmlFSO.add()"/>
         <input type="button" value="del" onclick="htmlFSO.delete();"/>
+        <input type="button" value="部署" onclick='git.pages().then(function(a){alert(a)})'/>
         <input type="button" value="open" onclick='var obj = window.open("","test","_blank");obj.document.write(page.txt.value);obj.document.close();'/>
         <input type="button" value="打开" onclick='window.open(page.name.value);'/>
     </div>
